[gd_scene load_steps=2 format=3 uid="uid://selection_panel_scene"]

[ext_resource type="Script" path="res://scripts/UI/selection_panel.gd" id="1_panel"]

[node name="SelectionPanel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 400)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -220.0
offset_bottom = 400.0
grow_horizontal = 0
grow_vertical = 1
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PortraitSection" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="MarginContainer/VBoxContainer/PortraitSection"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="NameSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="UnitName" type="Label" parent="MarginContainer/VBoxContainer/NameSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "UNIT NAME"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="MarginContainer/VBoxContainer/NameSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Class - Role"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HPRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsSection/HPRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "HP:"

[node name="HPValue" type="Label" parent="MarginContainer/VBoxContainer/StatsSection/HPRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "30 / 30"

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
columns = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CombatStatsSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilitiesSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AbilitiesHeader" type="Label" parent="MarginContainer/VBoxContainer/AbilitiesSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "ABILITIES"

[node name="AbilitiesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/AbilitiesSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatusHeader" type="Label" parent="MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "STATUS EFFECTS"

[node name="StatusContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_constants/separation = 2
